--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ POSTGRES_HOST=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
 
+NEXT_PUBLIC_BASE_URL=
+
 # `openssl rand -base64 32`
 AUTH_SECRET=
 AUTH_URL=http://localhost:3000/api/auth
